--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class = "moreinfo">
+				<input type="button" value="Click for more information" class="button" onclick="window.location.href='education.html'">
+			</div>
+			</div>
 		</div>
 		<div>
 			<div class="three-column-footer-contact-form-container">
