--- a/contact.html
+++ b/contact.html
@@ -41,12 +41,10 @@
                 <div class = "col-md-5">
                     <form class="pure-form pure-form-aligned">
                         <fieldset>
+                            
                             <div class="pure-control-group">
-                                <label for="aligned-name">Username</label>
-                                <input type="text" id="aligned-name" placeholder="Username" />                            </div>
-                            <div class="pure-control-group">
-                                <label for="aligned-password">Password</label>
-                                <input type="password" id="aligned-password" placeholder="Password" />
+                                <label for="aligned-password">Full Name</label>
+                                <input type="text" id="aligned-password" placeholder="Full Name" />
                             </div>
                             <div class="pure-control-group">
                                 <label for="aligned-email">Email Address</label>
