--- a/education.html
+++ b/education.html
@@ -32,53 +32,74 @@
             </div>
         </nav>
     </div>
-    <div class="container">
-        <div class="wrappereducation">
-        <div class="row">
-            <div class="col-md-4" style="width: 18rem;">
-                <img src="interest.png" class="card-img-top" alt="..." id="educationimage">
-                <div class="card-body">
-                    <h5 class="card-title">Interest and taxes</h5>
-                    <p class="card-text">The fee we pay for borrowing money. </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+    
+    <div>
+        <div class="container">
+        <div class ="wrappereducation">
+            <div class="row">
+                <div class="col-md-8" >
+                    <img src="interest.png" class="card-img-top" alt="..." id="educationimage">
+                    <div class="card-body">
+                        <h5 class="card-title">Interest</h5>
+                        <p class="card-text">The fee we pay for borrowing money. </p>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-4" style="width: 18rem;">
-                <img src="tax.png" class="card-img-top" alt="..."  id="educationimage">
-                <div class="card-body">
-                  <h5 class="card-title">Taxes</h5>
-                  <p class="card-text">Taxes is the government's subscription fee for living in society.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+            <div class="row">
+                <h6>How could interest get affected using credit card? Lets find out...</h6>
+                <p>Imagine a credit card as a magical plastic buddy that lets you borrow money from a bank. It's like having a pocket-sized loan genie! You can swipe up to a certain limit set by the bank, kinda like having a spending cap. But watch out for the bill—it's like a receipt with a twist! Ignore it, and you'll face the dreaded "interest" charge. Oh, and you've gotta be 18 to get your own card, but if you're younger, you can still ride along on someone else's card as an authorized user. Talk about a credit card escapade, right?</p>
+                <h6>why the interest matters?</h6>
+                <p>  Using a credit card responsibly builds your credit history, showing lenders you're trustworthy with money. However, missing payments or maxing out your card can hurt your credit score and make borrowing harder in the future.</p>
+                <h6>How could interest affect mortage loan?</h6>
+                <p>A mortgage is like a pact between you and a bank. They provide the funds for buying a home, and you agree to pay it back with interest. For example, if you're eyeing a $200,000 house, a mortgage lets you spread out the payments. Each month, you repay a portion of the loan (principal) along with interest. But beware, missing payments could result in the bank seizing your home. So, staying on top of payments is crucial to safeguard your investment.</p>
             </div>
-            <div class="col-md-4" style="width: 18rem;">
-                <img src="retire.png" class="card-img-top" alt="..."  id="educationimage">
-                <div class="card-body">
-                  <h5 class="card-title">Retirement Plans</h5>
-                  <p class="card-text">A retirement plan is like a savings account for the future, but instead of a rainy day, it's for a sunny retirement.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="row">
+                <div class="col-md-8" >
+                    <img src="tax.png" class="card-img-top" alt="..."  id="educationimage">
+                    <div class="card-body">
+                      <h5 class="card-title">Taxes</h5>
+                      <p class="card-text">Taxes is the government's subscription fee for living in society.</p>
+                    </div>
                 </div>
+                <p></p>
+                <p>Taxes are money the government collects to pay for things like schools, roads, and healthcare. They're mandatory payments based on what you earn, buy, and own. But there are legal ways to pay less tax. Deductions are expenses like mortgage interest or charity donations that lower how much of your income gets taxed. Credits directly reduce your tax bill, like getting money back for having kids. Putting money into retirement or health savings accounts can lower your tax bill too. Some investments, such as municipal bonds, don't get taxed. Tax rates can change depending on how much you earn, so knowing your tax bracket helps you figure out how much tax you'll owe. However, if you don't pay taxes on time or file late, you might have to pay extra fees called penalties and interest charges, which can make your tax bill higher.</p>
             </div>
-        </div> 
-        <div class="row">
-            <div class="col-md-4" style="width: 18rem;">
-                <img src="stock.png" class="card-img-top" alt="..."  id="educationimage">
-                <div class="card-body">
-                    <h5 class="card-title">Stocks</h5>
-                    <p class="card-text">Tiny pieces of ownership in companies, traded on financial markets.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="row">
+                <div class="col-md-8" >
+                    <img src="retire.png" class="card-img-top" alt="..."  id="educationimage">
+                    <div class="card-body">
+                      <h5 class="card-title">Retirement Plans</h5>
+                      <p class="card-text">A retirement plan is like a savings account for the future, but instead of a rainy day, it's for a sunny retirement.</p>
+                    </div>
                 </div>
+                <p>Hey, want to know a secret to a fun future? It's all about retirement plans! Just stash a bit of cash from each paycheck now, and you'll be living the dream later when you're not working. Aim for around 65 years old to kick back, but hey, you do you!<br>
+                    Now, check out these cool options: there's Roth IRA—stash your after-tax dollars and watch it grow tax-free! Then there's the 401(k)—your boss might throw in some extra cash too!<br>
+                    Want to join the retirement party? Just chat with HR or check your benefits package for all the juicy details. Get ready to save now and play later—it's going to be a blast!</p>
             </div>
-            <div class="col-md-4" style="width: 18rem;">
-                <img src="realestate.png" class="card-img-top" alt="..."  id="educationimage">
-                <div class="card-body">
-                    <h5 class="card-title"> Real Estate</h5>
-                    <p class="card-text">Land and buildings that people own or use for living, working, or investing.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="row">
+                <div class="col-md-8" >
+                    <img src="stock.png" class="card-img-top" alt="..."  id="educationimage">
+                    <div class="card-body">
+                        <h5 class="card-title">Stocks</h5>
+                        <br>
+                        <p class="card-text">Tiny pieces of ownership in companies, traded on financial markets.</p>
+                    </div>
                 </div>
+                <p></p>
+                <p>Okay, imagine stocks as pieces of a giant puzzle, where you get to own a tiny slice of a big company. It's like being a mini-boss! But hold onto your hat, because stocks can be a bit like riding a roller coaster—super thrilling, but also a bit scary. Some stocks can make you a bunch of money, while others might not do so great. So, while there's no such thing as a totally safe stock, some big-name ones, like Coca-Cola or Apple, are like the superheroes of the stock world. Now, here's the scoop: you've gotta be at least 18 to play the stock market game, but parents can set up special accounts for kids too. And hey, here's the kicker—stocks aren't tax-free. When you sell a stock and make some dough, Uncle Sam might want a piece of the pie too. So, before you dive in, grab a buddy (or a financial advisor) and get ready for a wild ride in the stock market jungle!</p>
+            </div>
+            <div class="row">
+                <div class="col-md-8" >
+                    <img src="realestate.png" class="card-img-top" alt="..."  id="educationimage">
+                    <div class="card-body">
+                        <h5 class="card-title"> Real Estate</h5>
+                        <p class="card-text">Land and buildings that people own or use for living, working, or investing.</p>                    </div>
+                </div>
+                <p></p>
+                <p>Real estate is like owning a piece of the world—a chunk of land or a building that's all yours! It's not just a place to live; it's a money-making machine! You can rent it out to others and earn cash, like becoming the boss of your own mini kingdom! Or, you can buy low, fix it up, and sell high, like flipping pancakes for profit! Now, here's the cool part: you can supercharge your real estate game with something called leverage—it's like using a cheat code to boost your power! Leverage lets you borrow money to buy even more real estate, making your empire and your riches grow! And guess what? There's no age limit to being a real estate mogul—you can start building your kingdom whenever you're ready! Just make sure you've got some gold coins (money) saved up, and you're good to go. So, put on your crown and get ready to rule your own real estate kingdom! As for documents, you'll need your ID (like a passport), proof of income (show you can afford it), bank statements (to show your treasure chest), and a sprinkle of magic—oops, I mean a purchase agreement and maybe a home inspection report to make sure your castle's in tip-top shape!</p>
             </div>
         </div>
-    </div> 
     </div>
+   
 </body>
 </html>
